--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/small-business.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,21 +40,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                    <img src="http://placehold.it/150x50&text=Logo" alt="">
+                <a class="navbar-brand" href="index.html">
+                    <img src="http://placehold.it/150x50&text=Logo und Name" alt="">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Leistungen</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Ordination</a>
+                    </li>
+                    <li>
+                        <a href="#">Team</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontakt</a>
+                    </li>
+                    <li>
+                        <a href="impressum.html">Impressum</a>
                     </li>
                 </ul>
             </div>
@@ -66,15 +76,15 @@
     <div class="container">
 
         <!-- Heading Row -->
-        <div class="row">
-            <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" alt="">
+        <div class="row row-index">
+            <div class="col-md-12">
+                <img class="img-responsive img-rounded img-index" src="http://placehold.it/900x350" width="80%" alt="">
             </div>
             <!-- /.col-md-8 -->
-            <div class="col-md-4">
-                <h1>Business Name or Tagline</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+            <div class="col-md-12">
+                <h1>Maybe noch ah überschrift ??</h1>
+                <p>Herzlich Willkommen in der Ordination Dr. Petra Douschan, lernen Sie unsere Ordination und Team kennen.</p>
+                <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -82,28 +92,21 @@
 
         <hr>
 
-        <!-- Call to Action Well -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="well text-center">
-                    This is a well that is a great spot for a business tagline or phone number for easy access!
-                </div>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>PEZIIIII</h2>
+                <p>DR P.D</p>
+                <p>Zahnarzt/Wahlarzt</p>
+                <p>Tel: +43 699 10500590</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>Termine</h2>
+                <p>Mo + Mi: 14-18</p>
+                <p>Di + Do: 8-12</p>
+                <p>Fr: nach Vereinbarung</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
