--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Heading Row -->
         <div class="row row-index">
             <div class="col-md-12">
-                <img class="img-responsive img-rounded img-index" src="http://placehold.it/900x350" width="80%" alt="">
+                <img class="img-responsive img-rounded img-index" src="http://placehold.it/900x350" width="100%" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
@@ -96,23 +96,23 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>PEZIIIII</h2>
-                <p>DR P.D</p>
-                <p>Zahnarzt/Wahlarzt</p>
-                <p>Tel: +43 699 10500590</p>
+                <p>DR Petra Douschan <br/>
+                Zahnarzt/Wahlarzt<br/>
+                Tel: +43 699 10500590</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Termine</h2>
-                <p>Mo + Mi: 14-18</p>
-                <p>Di + Do: 8-12</p>
-                <p>Fr: nach Vereinbarung</p>
+                Mo + Mi: 14-18<br/>
+                Di + Do: 8-12<br/>
+                Fr: nach Vereinbarung</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
-                <h2>Heading 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                <h2>Notfälle</h2>
+                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>
                 <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
