added index picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Small Business - Start Bootstrap Template</title>
+    <title>Ordination Dr Petra Douschan</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,7 +78,7 @@
         <!-- Heading Row -->
         <div class="row row-index">
             <div class="col-md-12">
-                <img class="img-responsive img-rounded img-index" src="http://placehold.it/900x350" width="100%" alt="">
+                <img class="img-responsive img-rounded img-index" src="bilder/DrPetraDouschan_900x567.png" width="90%" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
