--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <link rel="shortcut icon" type="image/x-icon" href="bilder/placeholder.ico" />
+
 </head>
 
 <body>
