--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" type="image/x-icon" href="bilder/placeholder.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="pictures/placeholder.ico" />
 
 </head>
 
@@ -50,19 +50,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Leistungen</a>
+                        <a href="services.html">Leistungen</a>
                     </li>
                     <li>
-                        <a href="#">Ordination</a>
+                        <a href="ordiantion.html">Ordination</a>
                     </li>
                     <li>
-                        <a href="#">Team</a>
+                        <a href="team.html">Team</a>
                     </li>
                     <li>
-                        <a href="#">Kontakt</a>
+                        <a href="contact.html">Kontakt</a>
                     </li>
                     <li>
                         <a href="impressum.html">Impressum</a>
@@ -80,7 +80,7 @@
         <!-- Heading Row -->
         <div class="row row-index">
             <div class="col-md-12">
-                <img class="img-responsive img-rounded img-index" src="bilder/DrPetraDouschan_900x567.png" width="90%" alt="">
+                <img class="img-responsive img-rounded img-index" src="pictures/DrPetraDouschan_900x567.png" width="90%" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
@@ -101,7 +101,7 @@
                 <p>DR Petra Douschan <br/>
                 Zahnarzt/Wahlarzt<br/>
                 Tel: +43 699 10500590</p>
-                <a class="btn btn-default" href="#">More Info</a>
+                <a class="btn btn-default" href="team.html">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
