contact page added

--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" type="image/x-icon" href="bilder/placeholder.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="pictures/placeholder.ico" />
 
 </head>
 
@@ -43,24 +43,30 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-        <img src="http://placehold.it/150x50&text=HOME LOGO" alt="">
+          <img src="http://placehold.it/150x50&text=Logo und Name" alt="">
       </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="about.html">About</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-        <li>
-          <a href="impressum.html">Impressum</a>
-        </li>
+          <li>
+              <a href="index.html">Home</a>
+          </li>
+          <li>
+              <a href="services.html">Leistungen</a>
+          </li>
+          <li>
+              <a href="ordiantion.html">Ordination</a>
+          </li>
+          <li>
+              <a href="team.html">Team</a>
+          </li>
+          <li>
+              <a href="contact.html">Kontakt</a>
+          </li>
+          <li>
+              <a href="impressum.html">Impressum</a>
+          </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -98,17 +104,20 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="services.html">Leistungen</a>
           </li>
           <li>
-            <a href="services.html">Services</a>
+            <a href="ordination.html">Ordination</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="team.html">Team</a>
           </li>
           <li>
-            <a href="impressum.html">Impressum</a>
+            <a href="contact.html">Kontakt</a>
           </li>
+          <li>
+             <a href="impressum.html">Impressum</a>
+         </li>
         </ul>
       </div>
     </div>
