--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4">
-                <h2>PEZIIIII</h2>
+                <h2>Behandelnder Arzt</h2>
                 <p>DR Petra Douschan <br/>
                 Zahnarzt/Wahlarzt<br/>
                 Tel: +43 699 10500590</p>
@@ -126,6 +126,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Your Website 2014</p>
+                    <a href="impressum.html">Impressum</a>
                 </div>
             </div>
         </footer>
