--- a/impressum.html
+++ b/impressum.html
@@ -43,7 +43,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">
-        <img src="http://placehold.it/150x50&text=HOME LOGO" alt="">
+          <img src="http://placehold.it/150x50&text=Logo und Name" alt="">
       </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
