--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Contact
-                    <small>Subheading</small>
+                <h1 class="page-header">Kontakt
+                    <small>Informationen</small>
                 </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Contact</li>
-                </ol>
             </div>
         </div>
         <!-- /.row -->
@@ -97,21 +92,21 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2739.6903164151126!2d14.340761500000001!3d46.6328799!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47707351fe10ed63%3A0xb90396577ece6005!2sSchachterlweg+84%2C+9020+Sankt+Peter+am+Bichl!5e0!3m2!1sen!2sat!4v1413989146829"></iframe>
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
-                <h3>Contact Details</h3>
+                <h3>Details</h3>
                 <p>
-                    3481 Melrose Place<br>Beverly Hills, CA 90210<br>
+                    Dr. Petra Douschan <br> Schachterlweg 84 <br> 9020 Klagenfurt<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <abbr title="Phone">P</abbr>: (+43) 699-10500590</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">email? was is das ?</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+                    <abbr title="Hours">Ordinatzionszeiten: <br></abbr> Mo + Fr: 14 - 18 Uhr <br> Di + Do: 8 - 12 Uhr <br> Fr: Nach Vereinbarung</p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -129,7 +124,19 @@
             </div>
         </div>
         <!-- /.row -->
-
+<hr>
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img-responsive img-rounded" src="http://placehold.it/800x300" width="90%" alt="">
+            </div>
+            <!-- /.col-md-8 -->
+            <div class="col-md-12">
+                <h1>You want something to say here ?</h1>
+                <p>IF not: Please ask administrator for support!</p>
+                <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
+            </div>
+            <!-- /.col-md-4 -->
+        </div>
         <!-- Contact Form -->
         <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file.
         <div class="row">
