added team site

--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 <hr>
         <div class="row">
             <div class="col-md-12">
-                <img class="img-responsive img-rounded" src="http://placehold.it/800x300" width="90%" alt="">
+                <img class="img-responsive img-rounded" src="http://placehold.it/800x300" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
