--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="services.html">Leistungen</a>
+                        <a href="services.html">LEISTUNGEN</a>
                     </li>
                     <li>
-                        <a href="ordiantion.html">Ordination</a>
+                        <a href="ordiantion.html">ORDINATION</a>
                     </li>
                     <li>
-                        <a href="team.html">Team</a>
+                        <a href="team.html">TEAM</a>
                     </li>
                     <li>
-                        <a href="contact.html">Kontakt</a>
+                        <a href="contact.html">KONTAKT</a>
                     </li>
                     <li>
-                        <a href="impressum.html">Impressum</a>
+                        <a href="impressum.html">IMPRESSUM</a>
                     </li>
                 </ul>
             </div>
