--- a/ordination.html
+++ b/ordination.html
@@ -86,12 +86,12 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Leistungen
+                <h1 class="page-header">Ordination
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Leistungen</li>
+                    <li class="active">Ordination</li>
                 </ol>
             </div>
         </div>
@@ -100,7 +100,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Leistungen/Instrumente_900x600.jpg" alt="">
+                    <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum_clean_900x645.jpg" alt="">
             </div>
             <div class="col-md-5">
                 <h3>Project One</h3>
@@ -115,7 +115,7 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Leistungen/Laser_900x525.jpg" alt="">
+                    <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum2_900x600.jpg" alt="">
             </div>
             <div class="col-md-5">
                 <h3>Project Two</h3>
@@ -130,7 +130,7 @@
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Leistungen/Napfpolierer_900x600.jpg" alt="">
+                    <img class="img-responsive img-hover" src="pictures/Ordination/KleinerBehandlungsraum_900x600.jpg" alt="">
             </div>
             <div class="col-md-5">
                 <h3>Project Three</h3>
@@ -146,7 +146,7 @@
         <div class="row">
 
             <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Leistungen/Polierer2_900x893.jpg" alt="">
+                    <img class="img-responsive img-hover" src="pictures/Ordination/warezimmer_603x900.jpg" alt="">
             </div>
             <div class="col-md-5">
                 <h3>Project Four</h3>
@@ -161,33 +161,7 @@
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Leistungen/Polierer_900x900.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive img-hover" src="pictures/Leistungen/Röntgengerät_900x786.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <img class="img-responsive img-hover" src="pictures/Leistungen/VDWRezi_900x634.jpg" alt="">
+                    <img class="img-responsive img-hover" src="pictures/Ordination/Warteraum-(2)_900x600.jpg" alt="">
             </div>
             <div class="col-md-5">
                 <h3>Project Five</h3>
