--- a/impressum.html
+++ b/impressum.html
@@ -18,6 +18,12 @@
     <link href="css/small-business.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -32,46 +38,46 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">
-          <img src="http://placehold.it/150x50&text=Logo und Name" alt="">
-      </a>
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-custom" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">
+                <img class="logo" src="pictures/logo_web_170.jpg" alt="">
+            </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="index.html">HOME</a>
+                </li>
+                <li>
+                    <a href="services.html">LEISTUNGEN</a>
+                </li>
+                <li>
+                    <a href="ordination.html">ORDINATION</a>
+                </li>
+                <li>
+                    <a href="team.html">TEAM</a>
+                </li>
+                <li>
+                    <a href="contact.html">KONTAKT</a>
+                </li>
+                <li>
+                    <a href="impressum.html">IMPRESSUM</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a href="services.html">Leistungen</a>
-          </li>
-          <li>
-              <a href="ordiantion.html">Ordination</a>
-          </li>
-          <li>
-              <a href="team.html">Team</a>
-          </li>
-          <li>
-              <a href="contact.html">Kontakt</a>
-          </li>
-          <li>
-              <a href="impressum.html">Impressum</a>
-          </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container -->
+    <!-- /.container -->
 </nav>
 
 <!-- Page Content -->
@@ -122,6 +128,9 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="js/costum.js"></script>
 
 </body>
 
