--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="services.html">LEISTUNGEN</a>
                     </li>
                     <li>
-                        <a href="ordiantion.html">ORDINATION</a>
+                        <a href="ordination.html">ORDINATION</a>
                     </li>
                     <li>
                         <a href="team.html">TEAM</a>
