--- a/index.html
+++ b/index.html
@@ -90,8 +90,13 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
-                <h1>Maybe noch ah überschrift ??</h1>
-                <p>Herzlich Willkommen in der Ordination Dr. Petra Douschan, lernen Sie unsere Ordination und Team kennen.</p>
+                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan, lernen Sie uns und unsere Ordination und Team kennen</h2>
+                <hr>
+                <p id="index-text">In unseren Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
+                    haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,
+                    als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.
+                    Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.
+                    Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
@@ -104,10 +109,10 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Behandelnder Arzt</h2>
-                <p>DR Petra Douschan <br/>
+                <p>Dr. Petra Douschan <br/>
                 Zahnarzt/Wahlarzt<br/>
                 Tel: +43 699 10500590</p>
-                <a class="btn btn-default" href="team.html">More Info</a>
+                <a class="btn btn-default" href="contact.html">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
@@ -115,13 +120,11 @@
                 Mo + Mi: 14-18<br/>
                 Di + Do: 8-12<br/>
                 Fr: nach Vereinbarung</p>
-                <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4">
                 <h2>Notfälle</h2>
                 <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>
-                <a class="btn btn-default" href="#">More Info</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
