new index seite

--- a/index.html
+++ b/index.html
@@ -85,12 +85,29 @@
 
         <!-- Heading Row -->
         <div class="row row-index">
-            <div class="col-md-12">
+            <div class="col-md-10">
                 <img class="img-responsive img-rounded img-index" src="pictures/DrPetraDouschan_900x567.png" width="90%" alt="">
             </div>
-            <!-- /.col-md-8 -->
+
+            <div class="col-md-2">
+                <h2>Behandelnder Arzt</h2>
+                <p>Dr. Petra Douschan <br/>
+                    Zahnarzt/Wahlarzt<br/>
+                    Tel: +43 699 10500590</p>
+                <a class="btn btn-default" href="contact.html">More Info</a>
+                <h2>Termine</h2>
+                Mo + Mi: 14-18<br/>
+                Di + Do: 8-12<br/>
+                Fr: nach Vereinbarung</p>
+                <h2>Notfälle</h2>
+                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>
+
+            </div>
+
+</div>
+        <div class="row row-index">
             <div class="col-md-12">
-                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan, lernen Sie uns und unsere Ordination und Team kennen</h2>
+                <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>
                 <hr>
                 <p id="index-text">In unseren Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
                     haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,
@@ -104,31 +121,7 @@
         <!-- /.row -->
 
         <hr>
-
-        <!-- Content Row -->
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Behandelnder Arzt</h2>
-                <p>Dr. Petra Douschan <br/>
-                Zahnarzt/Wahlarzt<br/>
-                Tel: +43 699 10500590</p>
-                <a class="btn btn-default" href="contact.html">More Info</a>
-            </div>
-            <!-- /.col-md-4 -->
-            <div class="col-md-4">
-                <h2>Termine</h2>
-                Mo + Mi: 14-18<br/>
-                Di + Do: 8-12<br/>
-                Fr: nach Vereinbarung</p>
-            </div>
-            <!-- /.col-md-4 -->
-            <div class="col-md-4">
-                <h2>Notfälle</h2>
-                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>
-            </div>
-            <!-- /.col-md-4 -->
-        </div>
-        <!-- /.row -->
+        
 
         <!-- Footer -->
         <footer>
