--- a/ordination.html
+++ b/ordination.html
@@ -80,123 +80,101 @@
     <!-- /.container -->
 </nav>
 
-    <!-- Page Content -->
-    <div class="container">
+<!-- Page Content -->
+<div class="container">
 
-        <!-- Page Heading/Breadcrumbs -->
+    <!-- Page Heading/Breadcrumbs -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Ordination
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="index.html">Home</a>
+                </li>
+                <li class="active">Ordination</li>
+            </ol>
+        </div>
+    </div>
+    <!-- /.row -->
+
+
+    <!-- Project One -->
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum_clean_900x645.jpg" alt="">
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project One -->
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum2_900x600.jpg" alt="">
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Three -->
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/KleinerBehandlungsraum_900x600.jpg" alt="">
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Four -->
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/warezimmer_603x900.jpg" alt="">
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/Warteraum-(2)_900x600.jpg" alt="">
+        </div>
+    </div>
+
+    <hr>
+
+
+
+    <!-- Project Three -->
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-responsive img-hover" src="pictures/Ordination/Röntgengerät_900x786.jpg" alt="">
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Footer -->
+    <footer>
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Ordination
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Ordination</li>
-                </ol>
+                <p>Copyright &copy; Your Website 2014</p>
             </div>
         </div>
-        <!-- /.row -->
+    </footer>
 
-        <!-- Project One -->
-        <div class="row">
-            <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum_clean_900x645.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project One</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-            </div>
-        </div>
-        <!-- /.row -->
+</div>
+<!-- /.container -->
 
-        <hr>
+<!-- jQuery Version 1.11.0 -->
+<script src="js/jquery-1.11.0.js"></script>
 
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Ordination/GroßerBehandlungsraum2_900x600.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Two</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Ordination/KleinerBehandlungsraum_900x600.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
-        <div class="row">
-
-            <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Ordination/warezimmer_603x900.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                    <img class="img-responsive img-hover" src="pictures/Ordination/Warteraum-(2)_900x600.jpg" alt="">
-            </div>
-            <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-
-
-
-
-
-
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 <!-- Custom Theme JavaScript -->
 <script src="js/costum.js"></script>
 
