--- a/services.html
+++ b/services.html
@@ -213,11 +213,10 @@
                             </div>
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion11" href="#collapseOneTwo">Wurzelbehandlungen »
+                                <a data-toggle="collapse" data-parent="#accordion11" href="#collapseOneTwo">Wurzelbehandlungen
                                 </a>
 
                                 <div id="collapseOneTwo" class="panel-collapse collapse">
-                                    <div class="panel-body">NIX GUT</div>
                                 </div>
                             </div>
 
@@ -265,11 +264,10 @@
                         <div class="panel-group" id="accordion31">
 
                             <div class="panel">
-                                <a data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeOne">Weisheitszahnentfernungen »
+                                <a data-toggle="collapse" data-parent="#accordion31" href="#collapseThreeOne">Weisheitszahnentfernungen
                                 </a>
 
                                 <div id="collapseThreeOne" class="panel-collapse collapse">
-                                    <div class="panel-body"> TUT AUA </div>
                                 </div>
                             </div>
 
