--- a/team.html
+++ b/team.html
@@ -86,13 +86,12 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Need a heading
-                    <small>and Subheading?</small>
+                <h1 class="page-header">Team
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home needing?</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">About needing?</li>
+                    <li class="active">Team</li>
                 </ol>
             </div>
         </div>
@@ -102,12 +101,10 @@
         <div class="row">
             <div class="col-md-6">
                 <img class="img-responsive" src="pictures/DrPetraDouschan_900x567.png" alt="">
+                <p>Dr. Petra Doushan</p>
             </div>
             <div class="col-md-6">
-                <h2>ICH BIN DER CHEF ... SIE ALLE ZU KNECHTEN</h2>
-                <p>SOME word over my person: I AM THE BEST !!!!</p>
-                <p>Some more words ... loook at meeeeeeeee</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                <p>Dr. Petra Doushan</p>
             </div>
         </div>
         <!-- /.row -->
@@ -117,44 +114,7 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Our Team</h2>
             </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>Arbeiter 1: name: BLUB<br>
-                            <small>Job Title: arbeiter</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>John Smith<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+
         </div>
         <!-- /.row -->
 
