new index seite

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 Mo + Mi: 14-18<br/>
                 Di + Do: 8-12<br/>
                 Fr: nach Vereinbarung</p>
-                <h2>Notfälle</h2>
-                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>
+<!--                <h2>Notfälle</h2>
+                <p>Unsere Tore sind Ihnen für zahnärztiche Notfälle jederzeit offen. Um telefonische Voranmeldung wird gebeten um zu lange Wartezeiten zu Vermeiden.</p>-->
 
             </div>
 
@@ -121,7 +121,7 @@
         <!-- /.row -->
 
         <hr>
-        
+
 
         <!-- Footer -->
         <footer>
