added last pics

--- a/contact.html
+++ b/contact.html
@@ -132,13 +132,12 @@
         <!-- /.row -->
 <hr>
         <div class="row">
-            <div class="col-md-12">
-                <img class="img-responsive img-rounded" src="http://placehold.it/800x300" alt="">
+            <div class="col-md-6">
+                <img class="img-responsive img-rounded" src="pictures/haus.jpeg" alt="">
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
-                <h1>You want something to say here ?</h1>
-                <p>IF not: Please ask administrator for support!</p>
+                <p>Praxis</p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
