--- a/team.html
+++ b/team.html
@@ -99,25 +99,20 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="pictures/DrPetraDouschan_900x567.png" alt="">
-                <p>Dr. Petra Doushan</p>
-            </div>
-            <div class="col-md-6">
-                <p>Dr. Petra Doushan</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Team Members -->
-        <div class="row">
-            <div class="col-lg-12">
+<!--            <div class="col-md-12">
                 <h2 class="page-header">Our Team</h2>
+            </div>-->
+            <div class="col-md-3">
+                <img class="img-responsive" src="pictures/pezi.jpeg" alt="">
+                <p>Dr. Petra Doushan</p>
+            </div>
+            <div class="col-md-3">
+                <img class="img-responsive" src="pictures/assistant.jpeg" alt="">
+                <p>Worker1</p>
             </div>
 
         </div>
         <!-- /.row -->
-
 
         <!-- Footer -->
         <footer>
