deleted some rows

--- a/contact.html
+++ b/contact.html
@@ -108,9 +108,9 @@
                 </p>
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (+43) 699-10500590</p>
-                <p><i class="fa fa-envelope-o"></i> 
+<!--                <p><i class="fa fa-envelope-o"></i>
                     <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">email? was is das ?</a>
-                </p>
+                </p>-->
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">Ordinatzionszeiten: <br></abbr> Mo + Fr: 14 - 18 Uhr <br> Di + Do: 8 - 12 Uhr <br> Fr: Nach Vereinbarung</p>
                 <ul class="list-unstyled list-inline list-social-icons">
@@ -137,7 +137,7 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
-                <p>Praxis</p>
+                <p>Schachterlweg 84</p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
             </div>
             <!-- /.col-md-4 -->
