--- a/ordination.html
+++ b/ordination.html
@@ -88,11 +88,11 @@
         <div class="col-lg-12">
             <h1 class="page-header">Ordination
             </h1>
-            <ol class="breadcrumb">
+<!--            <ol class="breadcrumb">
                 <li><a href="index.html">Home</a>
                 </li>
                 <li class="active">Ordination</li>
-            </ol>
+            </ol>-->
         </div>
     </div>
     <!-- /.row -->
